--- a/animals.rmd
+++ b/animals.rmd
@@ -871,8 +871,8 @@ Earthworms are oligochaetes that support terrestrial food chains both as prey an
 
 (ref:polychae) [*Nereis virens*, a polychaete annelid.](https://commons.wikimedia.org/wiki/File:Nereis_virens.jpg) These sandworms eat seaweed and microorganisms and can be longer than four feet.
 
-```{r , fig.cap='(ref:)', echo=FALSE, message=FALSE, warning=FALSE}
-knitr::include_graphics("./figures//")
+```{r polychaete, fig.cap='(ref:polychae)', echo=FALSE, message=FALSE, warning=FALSE}
+knitr::include_graphics("./figures/animals/Nereis_virens.jpg")
 ```
 
 Since annelids are soft-bodied, their fossils are rare – mostly jaws and the mineralized tubes that some of the species secreted. Although some late Ediacaran fossils may represent annelids, the oldest known fossil that is identified with confidence comes from about 518 million years ago in the early Cambrian period. Fossils of most modern mobile polychaete groups appeared by the end of the Carboniferous, about 299 million years ago. Palaeontologists disagree about whether some body fossils from the mid Ordovician, about 472 to 461 million years ago, are the remains of oligochaetes, and the earliest indisputable fossils of the group appear in the Tertiary period, which began 66 million years ago.
